# video-to-audio-py

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml  requirements.txt
src/: gui.py  main.py
src/assets/: styles.py
src/converters/: video_to_audio.py
src/scripts/: run.py
src/services/: ffmpeg_service.py
src/utils/: file_dialog.py
src/youtube_to_mp3/: __main__.py  cli.py  config.py  converter.py  downloader.py  gui.py  utils.py
tests/: test_conversion.py
